tests/neg-custom-args/captures/simple-escapes.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/simple-escapes.scala:16:10 -------------------------------
16 |    foo = f      // error
   |          ^
   |          Found:    (f : FileOutputStream^{local})
   |          Required: FileOutputStream^{cap[Test1]}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/simple-escapes.scala:19:15 ----------------------------------------------------
19 |  val later2 = usingLogFile { local => f => // error
   |               ^^^^^^^^^^^^
   |               escaping local reference local.type
